bug: Bottom cards are cut on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,12 @@ html {
     display: flex;
     align-items: center;
     font-family: 'Arial Black', Gadget, sans-serif;
+    width: 100%;
+}
+
+header,
+.toolbar {
+    margin-top: -21px;
 }
 
 h1,
@@ -41,7 +47,7 @@ h1 {
 
 .toolbar {
     display: flex;
-    width: 320px;/*Fixed dimension so to be visible well on desktops and mobile browsers*/
+    width: 300px;/*Fixed dimension so to be visible well on desktops and mobile browsers*/
     height: 45px;
     flex-wrap: wrap;
     border-style: solid;
@@ -60,7 +66,7 @@ h1 {
 .clicks,
 .rating,
 .restart {
-    width: 53px;
+    width: 46px;
     padding-top: 25px;
     font-size: 0.8em;
     background-color: transparent;/*fit buttons within toolbar*/
@@ -85,7 +91,7 @@ span {
 .deck {
     display: flex;
     flex-wrap: wrap;
-    margin: 30px 0px;
+    margin: 6px 0px;
     width: 266px;/*Fixed dimension so to be visible well on desktops and mobile browsers*/
     height: 264px;
     border: 7px solid #fff;
